--- a/ETec.HTML
+++ b/ETec.HTML
@@ -49,7 +49,7 @@
         <div class="categorias" id="categorias">
 			<div class="categoria activa" data-categoria="Cordinacion">
 				
-				<p>Cordinacción</p>
+				<p>Coordinación</p>
 			</div>
 			<div class="categoria" data-categoria="equipo">
 				
