cambio de fecha , centrado de titulos

--- a/ETec.HTML
+++ b/ETec.HTML
@@ -88,7 +88,7 @@
 			<div class="contenedor-preguntas" data-categoria="equipo">
 				<div class="contenedor-pregunta activo">
 					<p class="pregunta"> Autores
-					<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<img src="./img/arrow.svg" alt="Abrir Respuesta" /></p>
 					<ul class="respuesta"> 
                     <ul>
                      <li>Investigadores</li>
@@ -128,7 +128,7 @@
 
 				<div class="contenedor-pregunta">
 					<p class="pregunta"> Cartografia
-					<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<img src="./img/arrow.svg" alt="Abrir Respuesta" /></p>
 					<ul class="respuesta"> 
                         <ul>
                         <p>Cordinación Técnica</p>
@@ -163,7 +163,7 @@
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">Editorial
-					<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<img src="./img/arrow.svg" alt="Abrir Respuesta" /></p>
 					<ul class="respuesta"> 
                         <ul>
                          <li>Laura Diana López Ascencio</li>
@@ -184,7 +184,7 @@
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">Pagina Web del Atlas
-					<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<img src="./img/arrow.svg" alt="Abrir Respuesta" /></p>
 					<ul class="respuesta"> 
                         <ul>
                          <li>Diseñador web</li>
@@ -199,7 +199,7 @@
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">Geoportal de Atlas
-					<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<img src="./img/arrow.svg" alt="Abrir Respuesta" /></p>
 					<ul class="respuesta"> 
                         <ul>
                             <p>Cordinación Técnica</p>
