--- a/LG.html
+++ b/LG.html
@@ -55,13 +55,14 @@
          <div>
              <img src="img/geoportal.png"/>
          </div>
-         <div>
+         <div class="tema">
              <h4>Uso de repositorio Web</h4><hr>
          </div>
-         <div>
+         <div class="descripcion">
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
-             </p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
+            </p>
          </div>
          <div class="posicion">
              <a href="#" class="button">Descargar</a>
@@ -76,10 +77,10 @@
          <div>
              <img src="img/geoportal.png"/>
          </div>
-         <div>
+         <div class="tema">
              <h4>Lineamientos para generación de insumos</h4><hr>
          </div>
-         <div>
+         <div class="descripcion">
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
          </div>
          <div class="posicion">
@@ -94,11 +95,13 @@
          <div>
              <img src="img/geoportal.png"/>
          </div>
-         <div>
+         <div class="tema">
              <h4>Lineamientos editoriales</h4><hr>
          </div>
-         <div>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
+         <div class="descripcion">
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus.
+             </p>
          </div>
          <div class="posicion">
              <a href="#" class="button">Descargar</a>
@@ -112,10 +115,10 @@
          <div>
              <img src="img/geoportal.png"/>
          </div>
-         <div>
+         <div class="tema">
              <h4>Información General</h4><hr>
          </div>
-         <div>
+         <div class="descripcion">
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
          </div>
          <div class="posicion">
