identidad grafica , cambio de nombres a clases , creacion de colores hsl

--- a/ID.html
+++ b/ID.html
@@ -45,9 +45,49 @@
     <section class="Conte">
 
         <h3>Identidad Gráfica</h3>
-
-   
-
+        <section class="containers">
+        <div class="card-ig">
+            <div class="card-ig-header">
+                <img src="img/ig.jpg" alt="Profile Image" class="profile-img">
+            </div>
+            <div class="card-ig-body">
+                <p class="name">Name</p>
+                <p class="job">Becario</p>
+                <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
+            </div>
+        </div>
+        <div class="card-ig">
+            <div class="card-ig-header">
+                <img src="img/ig.jpg" alt="Profile Image" class="profile-img">
+            </div>
+            <div class="card-ig-body">
+                <p class="name"> Name</p>
+                <p class="job">Becario</p>
+                <p class="description"> Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
+            </div>
+        </div>
+        <div class="card-ig">
+            <div class="card-ig-header">
+                <img src="img/ig.jpg" alt="Profile Image" class="profile-img">
+            </div>
+            <div class="card-ig-body">
+                <p class="name">Name</p>
+                 <p class="job">Becario</p>
+                <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
+            </div>
+        </div>
+        <div class="card-ig">
+            <div class="card-ig-header">
+                <img src="img/ig.jpg" alt="Profile Image" class="profile-img">
+            </div>
+            <div class="card-ig-body">
+                <p class="name">Name</p>
+                <p class="job">Becario</p>
+                <p class="description"> Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
+            </div>
+        </div>
+            
+    </section>
     </section>
 
     <script src="js/func.js"></script>
