--- a/LG.html
+++ b/LG.html
@@ -56,7 +56,7 @@
              <img src="img/geoportal.png"/>
          </div>
          <div class="tema">
-             <h4>Uso de repositorio Web</h4><hr>
+             <h4>Uso de repositorio web</h4><hr>
          </div>
          <div class="descripcion">
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.
@@ -116,7 +116,7 @@
              <img src="img/geoportal.png"/>
          </div>
          <div class="tema">
-             <h4>Información General</h4><hr>
+             <h4>Información general</h4><hr>
          </div>
          <div class="descripcion">
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus vitae ipsum ut rutrum. Nam vel pretium metus. Quisque laoreet vel orci sagittis sagittis.</p>
